<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <EditText
            android:id="@+id/searchAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:alpha="@string/primary_text_alpha_dark"
            android:padding="8dp"
            android:text="Search Address" />
    </fragment>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/locationDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/mapAddressTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:alpha="@string/primary_text_alpha_dark"
                android:background="@color/white"
                android:padding="8dp"
                android:text="Address"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mapCityTextView"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:alpha="@string/secondary_text_alpha_dark"
                android:background="@color/white"
                android:padding="8dp"
                android:text="City" />

            <TextView
                android:id="@+id/hintTextView"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:alpha="@string/hint_disabled_text_alpha_dark"
                android:background="@color/white"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/click_help_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/radiusHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="@string/secondary_text_alpha_dark"
                android:gravity="center"
                android:text="@string/radius_text" />

            <EditText
                android:id="@+id/radiusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/increaseRadiusButton"
                style="@style/RadiusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="+" />

            <Button
                android:id="@+id/decreaseRadiusButton"
                style="@style/RadiusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="-" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true" >

            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mapAddressTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:alpha="@string/primary_text_alpha_dark"
            android:background="@color/white"
            android:padding="8dp"
            android:text="Address"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mapCityTextView"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:alpha="@string/secondary_text_alpha_dark"
            android:background="@color/white"
            android:padding="8dp"
            android:text="City" />

    </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
-->